--- a/cookies/Packages/manifest.json
+++ b/cookies/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
+    "com.unity.polybrush": "1.0.2",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.recorder": "2.4.0-preview.1",
     "com.unity.test-framework": "1.1.14",
