--- a/cookies/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/cookies/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -61,7 +61,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"523a103de7296574583f6e30f65b0cd8\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"03dc774709346774ea6e0887b9d8d2c6\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"eaec44456932f78499761a59ce5abd77\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"0e9450bd14b7f90499cf034b07b2cdae\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"0c74ab53ae418f24db4cfbfde74b0089\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"e06042d3976a7fd489dbaa32b1b66700\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
