--- a/cookies/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/cookies/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":false}"
+                "value": "{\"m_Value\":true}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -49,9 +49,24 @@
                 "value": "{\"m_Value\":true}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.IgnoreOpenEdges",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.StickToFirstAppliedDirection",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "SmoothBrush.IgnoreOpenEdges",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "UnityEngine.Polybrush.BrushMirror, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorAxis",
-                "value": "{\"m_Value\":0}"
+                "value": "{\"m_Value\":1}"
             },
             {
                 "type": "UnityEngine.Polybrush.MirrorCoordinateSpace, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
@@ -61,12 +76,12 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"eaec44456932f78499761a59ce5abd77\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"0e9450bd14b7f90499cf034b07b2cdae\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"0c74ab53ae418f24db4cfbfde74b0089\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"e06042d3976a7fd489dbaa32b1b66700\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"f37d699e4630b3d4fb5c4f69f577da00\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"5e6d5837755ca0247ab17255f0e06d4e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"6bc895fc054da364bb1b4868939270bc\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"135fbd523c582014da2baaeead33a68b\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"b0bed69730f1dd845a04c2b73f908c9e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"fea9448f28d19d841b9783c4ff127bda\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"e89199a86441f6a468306b9be1c579d1\",\"type\":2},\"prefab\":{\"fileID\":-927199367670048503,\"guid\":\"fe8a909ea2868044491d3dde26125c06\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":82}"
+                "value": "{\"m_Value\":79}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -82,6 +97,21 @@
                 "type": "UnityEngine.Gradient, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.BrushColorGradient",
                 "value": "{\"m_Value\":{\"serializedVersion\":\"2\",\"key0\":{\"r\":0.22699999809265138,\"g\":1.0,\"b\":0.22699999809265138,\"a\":1.0},\"key1\":{\"r\":1.0,\"g\":1.0,\"b\":1.0,\"a\":0.2587999999523163},\"key2\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key3\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key4\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key5\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key6\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key7\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"ctime0\":0,\"ctime1\":65535,\"ctime2\":0,\"ctime3\":0,\"ctime4\":0,\"ctime5\":0,\"ctime6\":0,\"ctime7\":0,\"atime0\":0,\"atime1\":65535,\"atime2\":0,\"atime3\":0,\"atime4\":0,\"atime5\":0,\"atime6\":0,\"atime7\":0,\"m_Mode\":0,\"m_NumColorKeys\":2,\"m_NumAlphaKeys\":2}}"
+            },
+            {
+                "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "RaiseLowerBrush.Direction",
+                "value": "{\"m_Value\":0}"
+            },
+            {
+                "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "Brush.Direction",
+                "value": "{\"m_Value\":1}"
+            },
+            {
+                "type": "System.Single, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.Strength",
+                "value": "{\"m_Value\":5.0}"
             }
         ]
     }
